dataset1235/2025-2/2947369575/users/3556712823/executions/1003782500_2667036473.log
== RUN (2025-08-27 22:02:55)
-- CODE: 
tempA =  (input("Digite a temperatura em graus celcius:")
tempB = (tempA + 273.15)
print (round (temperatura,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 21:58:42)
-- CODE: 
temperatura = input ("Digite a temperatura em graus celcius:")
Kelvin = Celcius + 273.15
print (round (temperatura,2) )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celcius + 273.15
             ^^^^^^^
NameError: name 'Celcius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celcius + 273.15
             ^^^^^^^
NameError: name 'Celcius' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celcius + 273.15
             ^^^^^^^
NameError: name 'Celcius' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celcius + 273.15
             ^^^^^^^
NameError: name 'Celcius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celcius + 273.15
             ^^^^^^^
NameError: name 'Celcius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celcius + 273.15
             ^^^^^^^
NameError: name 'Celcius' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 21:59:50)
-- CODE: 
temperatura = input ("Digite a temperatura em graus celcius:")
Kelvin = Celcius + 273.15
print (Kelvin = Celcius + 273.15 (round (temperatura,2)) )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
XXXX:3: SyntaxWarning: 'float' object is not callable; perhaps you missed a comma?
  print (Kelvin = Celcius + 273.15 (round (temperatura,2)) )
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celcius + 273.15
             ^^^^^^^
NameError: name 'Celcius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
XXXX:3: SyntaxWarning: 'float' object is not callable; perhaps you missed a comma?
  print (Kelvin = Celcius + 273.15 (round (temperatura,2)) )
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celcius + 273.15
             ^^^^^^^
NameError: name 'Celcius' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
XXXX:3: SyntaxWarning: 'float' object is not callable; perhaps you missed a comma?
  print (Kelvin = Celcius + 273.15 (round (temperatura,2)) )
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celcius + 273.15
             ^^^^^^^
NameError: name 'Celcius' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
XXXX:3: SyntaxWarning: 'float' object is not callable; perhaps you missed a comma?
  print (Kelvin = Celcius + 273.15 (round (temperatura,2)) )
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celcius + 273.15
             ^^^^^^^
NameError: name 'Celcius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
XXXX:3: SyntaxWarning: 'float' object is not callable; perhaps you missed a comma?
  print (Kelvin = Celcius + 273.15 (round (temperatura,2)) )
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celcius + 273.15
             ^^^^^^^
NameError: name 'Celcius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
XXXX:3: SyntaxWarning: 'float' object is not callable; perhaps you missed a comma?
  print (Kelvin = Celcius + 273.15 (round (temperatura,2)) )
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celcius + 273.15
             ^^^^^^^
NameError: name 'Celcius' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:03:07)
-- CODE: 
tempA =  (input("Digite a temperatura em graus celcius:")
tempB = ("tempA + 273.15")
print (round (temperatura,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:05:58)
-- CODE: 
tempA =  float(input("Digite a temperatura em graus celcius:"))
tempB = tempA + 273.15
print(round(tempB,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite a temperatura em graus celcius:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite a temperatura em graus celcius:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite a temperatura em graus celcius:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite a temperatura em graus celcius:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite a temperatura em graus celcius:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite a temperatura em graus celcius:303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:04:07)
-- CODE: 
tempA =  (input("Digite a temperatura em graus celcius:"))
tempB = ("tempA + 273.15")
print (round (tempB,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round (tempB,2))
           ^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round (tempB,2))
           ^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round (tempB,2))
           ^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round (tempB,2))
           ^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round (tempB,2))
           ^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round (tempB,2))
           ^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:04:38)
-- CODE: 
tempA =  (input("Digite a temperatura em graus celcius:"))
tempB = ("tempA + 273.15")
print (round(tempB,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round(tempB,2))
           ^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round(tempB,2))
           ^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round(tempB,2))
           ^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round(tempB,2))
           ^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round(tempB,2))
           ^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round(tempB,2))
           ^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:05:29)
-- CODE: 
tempA =  float(input("Digite a temperatura em graus celcius:"))
tempB = tempA + 273.15
print(round(tempB,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite a temperatura em graus celcius:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite a temperatura em graus celcius:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite a temperatura em graus celcius:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite a temperatura em graus celcius:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite a temperatura em graus celcius:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite a temperatura em graus celcius:303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:03:48)
-- CODE: 
tempA =  (input("Digite a temperatura em graus celcius:"))
tempB = ("tempA + 273.15")
print (round (temperatura,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round (temperatura,2))
                  ^^^^^^^^^^^
NameError: name 'temperatura' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round (temperatura,2))
                  ^^^^^^^^^^^
NameError: name 'temperatura' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round (temperatura,2))
                  ^^^^^^^^^^^
NameError: name 'temperatura' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round (temperatura,2))
                  ^^^^^^^^^^^
NameError: name 'temperatura' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round (temperatura,2))
                  ^^^^^^^^^^^
NameError: name 'temperatura' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round (temperatura,2))
                  ^^^^^^^^^^^
NameError: name 'temperatura' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:05:39)
-- CODE: 
tempA =  float(input("Digite a temperatura em graus celcius:"))
tempB = tempA + 273.15
print(round(tempB,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite a temperatura em graus celcius:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite a temperatura em graus celcius:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite a temperatura em graus celcius:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite a temperatura em graus celcius:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite a temperatura em graus celcius:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite a temperatura em graus celcius:303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:03:29)
-- CODE: 
tempA =  (input("Digite a temperatura em graus celcius:")
tempB = ("tempA + 273.15")
print (round (temperatura,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:03:35)
-- CODE: 
tempA =  (input("Digite a temperatura em graus celcius:"))
tempB = ("tempA + 273.15")
print (round (temperatura,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round (temperatura,2))
                  ^^^^^^^^^^^
NameError: name 'temperatura' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round (temperatura,2))
                  ^^^^^^^^^^^
NameError: name 'temperatura' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round (temperatura,2))
                  ^^^^^^^^^^^
NameError: name 'temperatura' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round (temperatura,2))
                  ^^^^^^^^^^^
NameError: name 'temperatura' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round (temperatura,2))
                  ^^^^^^^^^^^
NameError: name 'temperatura' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round (temperatura,2))
                  ^^^^^^^^^^^
NameError: name 'temperatura' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:05:10)
-- CODE: 
tempA =  (input("Digite a temperatura em graus celcius:"))
tempB = tempA + 273.15
print(round(tempB,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempB = tempA + 273.15
            ~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempB = tempA + 273.15
            ~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempB = tempA + 273.15
            ~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempB = tempA + 273.15
            ~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempB = tempA + 273.15
            ~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempB = tempA + 273.15
            ~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:02:56)
-- CODE: 
tempA =  (input("Digite a temperatura em graus celcius:")
tempB = (tempA + 273.15)
print (round (temperatura,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    tempA =  (input("Digite a temperatura em graus celcius:")
             ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:01:13)
-- CODE: 
temperatura = float (input Kelvin = Celcius + 273.15 ("Digite a temperatura em graus celcius:")
print (round (temperatura,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    temperatura = float (input Kelvin = Celcius + 273.15 ("Digite a temperatura em graus celcius:")
                         ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    temperatura = float (input Kelvin = Celcius + 273.15 ("Digite a temperatura em graus celcius:")
                         ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    temperatura = float (input Kelvin = Celcius + 273.15 ("Digite a temperatura em graus celcius:")
                         ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    temperatura = float (input Kelvin = Celcius + 273.15 ("Digite a temperatura em graus celcius:")
                         ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    temperatura = float (input Kelvin = Celcius + 273.15 ("Digite a temperatura em graus celcius:")
                         ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    temperatura = float (input Kelvin = Celcius + 273.15 ("Digite a temperatura em graus celcius:")
                         ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
